# Sandbox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
.github/workflows/: ci.yml
migrations/: 0001_create_core.down.sql  0002_create_tasks.up.sql  20221213021516_create_core.up.sql
src/: auth0.rs  config.rs  error.rs  lib.rs  main.rs  token_bucket.rs
src/api/: accounts.rs  auth.rs  mod.rs  pagination.rs  public.rs  ratelimit.rs  stripe.rs  users.rs
src/entity/: accounts.rs  mod.rs  prelude.rs  subscriptions.rs  tasks.rs  users.rs  users_accounts.rs
