[package]
name = "sandbox-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-stripe = { version = "0.25.2", default-features = false, features = ["runtime-tokio-hyper-rustls", "billing", "connect", "webhook-events", "uuid", "stream", "checkout"] }
axum = { version = "0.6.20", features = ["http2", "headers"] }
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "5.5.3"
dotenvy = "0.15.7"
figment = { version = "0.10.12", features = ["env"] }
jsonwebtoken = { version = "9.1.0", default-features = false }
owasp-headers = "0.1.2"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "trust-dns"] }
sea-orm = { version = "0.12.6", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-chrono", "with-uuid" ] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-default-headers = "0.1.1"
tower-http = { version = "0.5.0", features = ["trace", "cors", "compression-full", "request-id", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["serde", "v7"] }
