[package]
name = "sandbox-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-stripe = { version = "0.39.1", default-features = false, features = ["runtime-tokio-hyper-rustls", "billing", "connect", "webhook-events", "uuid", "stream", "checkout"] }
axum = { version = "0.7.7", features = ["http2"] }
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
jsonwebtoken = { version = "9.3.0", default-features = false }
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "trust-dns"] }
sea-orm = { version = "1.0.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-chrono", "with-uuid" ] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.11.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "cors", "compression-full", "request-id", "timeout", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v7"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
