[package]
name = "sandbox-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper-rustls"] }
axum = { version = "0.7.7", features = ["http2"] }
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
jsonwebtoken = { version = "9.3.0", default-features = false }
reqwest = { version = "0.12.8", features = [
  "http2",
  "charset",
  "json",
  "zstd",
  "brotli",
  "rustls-tls",
], default-features = false }
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-json",
  "with-chrono",
  "with-uuid",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
serde_with = "3.11.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "signal",
  "macros",
  "parking_lot",
] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [
  "trace",
  "cors",
  "compression-full",
  "request-id",
  "timeout",
  "set-header",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v7"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
